# aethersafha

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bench-history.csv  benchmarks.md  cyrius.cyml  deny.toml
benches/: compositor_benchmarks.rs  screen_capture_bench.rs
lib/: agnodrm.cyr  agnostik.cyr  async.cyr  async_agnos.cyr  bhumi.cyr  kavach.cyr  libro.cyr  mehman_sandbox.cyr  mehman_surface.cyr  mehman_types.cyr  rupa.cyr  sankoch.cyr  sigil.cyr  thread.cyr  thread_agnos.cyr  thread_win.cyr
programs/: puka_desktop_probe.cyr  puka_launch_probe.cyr  setu_buffer_probe.cyr  setu_create_probe.cyr  setu_demo_probe.cyr  setu_input_server_probe.cyr  setu_present_probe.cyr  setu_probe.cyr  setu_serve_probe.cyr  setu_session_probe.cyr
rust-old/: Cargo.toml  benchmarks.md  deny.toml
rust-old/benches/: compositor_benchmarks.rs  screen_capture_bench.rs
rust-old/examples/: headless_compositor.rs
rust-old/src/: accessibility.rs  apps.rs  compositor.rs  gestures.rs  renderer.rs  security_ui.rs  shell_integration.rs  theme_bridge.rs
rust-old/src/hud/: crew_status.rs  domain_filter.rs  gpu_status.rs
rust-old/src/wayland/: popups.rs  tests.rs
rust-old/tests/: renderer_integration.rs  security_integration.rs
scripts/: bench-history.sh  version-bump.sh
src/: accessibility.cyr  accessibility.rs  ai_features.cyr  ai_features.rs  apps.cyr  apps.rs  compositor.cyr  compositor.rs  desktop.cyr  foreign.cyr  geom.cyr  gestures.cyr  gestures.rs  gpu.cyr  input.cyr  lib.rs  main.cyr  main.rs  plugin_host.cyr  plugin_host.rs  render.cyr  renderer.rs  screen_capture.cyr  screen_capture.rs  screen_recording.cyr  screen_recording.rs  security_ui.cyr  security_ui.rs  setu_dispatch.cyr  setu_server.cyr  shell.cyr  shell.rs  shell_integration.cyr  shell_render.cyr  system_tests.rs  theme.cyr  theme_bridge.cyr  window.cyr  xwayland.rs
tests/: accessibility.tcyr  aethersafha.bcyr  aethersafha.fcyr  aethersafha.tcyr  ai_features.tcyr  apps.tcyr  (+16 more)
(+19 files in other folders)
