[package]
name = "aethersafha"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "AGPL-3.0-only"
description = "Aethersafha — AI-augmented Wayland compositor for AGNOS"
homepage = "https://github.com/MacCracken/aethersafha"
repository = "https://github.com/MacCracken/aethersafha"
readme = "README.md"
publish = false
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[[bin]]
name = "aethersafha"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[features]
default = ["wayland"]
wayland = ["wayland-server", "wayland-protocols", "wayland-protocols-wlr"]
gpu = ["mabda"]

[dependencies]
wayland-server = { version = "0.31", optional = true }
wayland-protocols = { version = "0.31", features = ["server"], optional = true }
wayland-protocols-wlr = { version = "0.2", features = ["server"], optional = true }
agnostik = { git = "https://github.com/MacCracken/agnostik", tag = "0.90.0" }
agnosys = { git = "https://github.com/MacCracken/agnosys", tag = "0.50.0" }
mabda = { version = "1.0.0", optional = true }
tokio = { version = "1.50", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.23", features = ["v4", "serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
clap = { version = "4.6", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
parking_lot = "0.12"
libc = "0.2"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "compositor_benchmarks"
harness = false

[[bench]]
name = "screen_capture_bench"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
